# mastermind

./: .gitignore  README.md  analyze.py  api_layout.py  create_eval_harness_splits.py  eval_harness.py  instructions.py  mastermind.code-workspace  pyproject.toml  run.py  run_anthropic.sh  run_eh_24.sh  run_eh_35.sh  run_eh_46.sh  run_full_game.py  run_full_game.sh  run_hf.sh  run_instructions.py  run_instructions.sh  run_instructions_24.sh  run_instructions_35.sh  run_instructions_46.sh  run_multiple_choice.sh  run_openai.sh  test.py
.github/: test.yaml
src/mastermind/: __init__.py  evaluator.py  game.py  models.py  solvers.py  utils.py
src/mastermind/solvers/: knuth-solver.py
tests/: conftest.py  test_evaluator.py  test_game.py  test_utils.py
