[project]
name = "Mastermind"
dynamic = ["version"]
description = "Evaluating LLMs using the game of mastermind."
authors = [{ name = "Jonas Golde", email = "jonas.max.golde@hu-berlin.de" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "transformers>=4.49.0",
    "accelerate>=1.4.0",
    "torch>=2.6.0",
    "huggingface-hub[cli]>=0.29.0",
    "rootutils>=1.0.7",
    "bitsandbytes>=0.45.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
eval-harness = [
    "lm-eval[hf]>=0.4.11",
]
prop-models = [
    "openai>=1.68.0",
    "anthropic>=0.49.0",
]
vllm = ["openai>=1.68.0"]
testing = ["pytest>=8.3.5"]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "ruff>=0.11.0",
]

[tool.setuptools]
packages = ["mastermind"]
package-dir = { "" = "src" }

[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
known_third_party = [
    "transformers",
    "accelerate",
    "torch",
    "huggingface-hub[cli]",
    "rootutils",
    "openai",
    "anthropic"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F405"]
